--- a/cooks/templates/cooks/cooks_list.html
+++ b/cooks/templates/cooks/cooks_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div id="search-results11">
     {% for recipe in recipe_list %}
-        <a href="{% url 'cooks:detail' recipe.title %}">
+        <a href="{% url 'cooks:detail' recipe.slug %}">
             <div class="cook_item">
                 <div class="cook_item_cont" >
                     <h3>{{ recipe.title }}</h3>
