--- a/cooks/templates/cooks/like_form.html
+++ b/cooks/templates/cooks/like_form.html
@@ -1,9 +1,7 @@
 <!-- #for getiing ip in pythonanywhere request.META.get('HTTP_X_REAL_IP') -->
-<form {% if is_liked %}hidden{% endif %} id="like_recipe">
-    <input type="submit" class="like_btn clickable" value="Like" name="like">
+<form hidden id="like_recipe">
     <input type="hidden" name="recipe_view" value="{{recipe}}">
 </form>
-<form {% if not is_liked %}hidden{% endif %} id="unlike_recipe">
-    <input type="submit" class="unlike_btn clickable" value="Unlike" name="unlike">
+<form hidden id="unlike_recipe">
     <input type="hidden" name="recipe_view" value="{{recipe}}">
 </form>
