--- a/stage9/static/stage9/css/style.css
+++ b/stage9/static/stage9/css/style.css
@@ -155,7 +155,7 @@ a:active {
 }
 
 .col-md-10 {
-    width: 60%;
+    width: 860px;
     display: inline-block;
 }
 
@@ -312,7 +312,7 @@ a:active {
 
 .cont {
     padding-bottom: 50px;
-    margin-left: 160px;
+    margin-left: 130px;
 }
 
 .container_info {
@@ -426,38 +426,6 @@ a:active {
     margin-right: 10px; margin-top: 20px;
 }
 
-.cook_detail {
-    display: block;
-    border: 1px solid #434343;
-    margin-right: 10px; margin-top: 20px;
-    padding: 5px;
-    background: #f0f8ff;
-    border-radius: 6px;
-    width: 700px;
-    min-height: 500px;
-    position: relative;
-}
-
-.ingredient_box {
-    position: absolute;
-    left:10px;
-    top: 260px;
-    width: 250px;
-    min-height: 208px;
-    margin-top:20px;
-    padding: 20px;
-    border: 1px solid #434343;
-    border-radius: 6px;
-}
-
-.recipe_form {
-    background: white;
-    padding: 20px;
-    padding-right: 68px;
-    border-radius: 6px;
-    position: relative;
-}
-
 .cook_item_cont {
     position: relative;
     width: 100%; height: 100%;
@@ -480,6 +448,81 @@ a:active {
 .cook_item :hover {
     opacity: 0.9;
 }
+
+/*
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext_top::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+.tooltip .tooltiptext_bot::after {
+    content: " ";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
+}
+
+.tooltip .tooltiptext_right::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+}
+
+.tooltip .tooltiptext_left::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent black;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+*/
 
 
 .mini_links {
